tests/errors/lex_int1.java
public class lex_int1 {
	int a = 2147483647;
	int b = -2147483647;
	int c = 21474836470;
}
